[metadata]
name = vroom_vitals
version = 0.1.0
author = Ahmet Kurt
author_email =
description =
long_description = file: README.rst
long_description_content_type = text/x-rst
url =
classifiers =

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.12.4
install_requires =
    obd==0.7.2

[options.extras_require]
dev =
    setuptools==72.1.0

[options.packages.find]
where = src